@startuml Domain Model
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Receptionist { }

class SNSUser {
  - citizenCard
  - snsNumber
  - name
  - birthDay
  - gender
  - phoneNumber
  - email
}

class Company {
  - designation
}

' class User {
'   - name
'   - email
'   - pwd
'   - role
' }

Receptionist "1" -- "*" SNSUser : registers >
Company "1" -- "*" Receptionist : knows >
Company "1" -- "*" SNSUser : knows >
' SNSUser "0..1" -- "1" User : becomes >

@enduml